--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,8 @@ web_modules/
 .env.test.local
 .env.production.local
 .env.local
+.env.keys
+
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -134,3 +136,24 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Database (tracked by Git LFS if needed)
+data/*.db
+data/*.db-shm
+data/*.db-wal
+drizzle/*
+
+# Compiled TypeScript
+dist/
+
+# Storage uploads
+storage/private/*
+storage/public/*
+!storage/private/.gitkeep
+!storage/public/.gitkeep
+
+# PM2
+.pm2/
+
+# Dev environment
+.env.local
